k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signtusk
  labels:
    name: signtusk
    environment: production
